c4prj1_deck/grade.txt
Grading at Sat 18 Nov 2023 01:36:46 AM UTC
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘helper’:
eval.c:208:7: error: ‘i’ undeclared (first use in this function)
  208 |   for(i=0;i<hand->n_cards;i++)
      |       ^
eval.c:208:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation of eval.c failed

Overall Grade: F
